<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.Parent.ParentPanelActivity">

    <TableLayout
        android:layout_width="231dp"
        android:layout_height="389dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/marksPreviewButton"
                android:layout_width="229dp"
                android:layout_height="match_parent"
                android:text="@string/markspreview"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="242dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sendToTeacherButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendToTeacher"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="394dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/inboxParentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inbox"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="410dp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>