<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.teacher.TeacherPanelActivity"
    android:background="@drawable/backgroundlight">

    <TableLayout
        android:layout_width="309dp"
        android:layout_height="349dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="300dp"
                android:layout_height="63dp"
                android:text="@string/register"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="242dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sendToParentsButton"
                android:layout_width="300dp"
                android:layout_height="63dp"
                android:text="@string/sendToParents"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="394dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/inboxTeacherButton"
                android:layout_width="300dp"
                android:layout_height="63dp"
                android:text="@string/inbox"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="410dp" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>