<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.teacher.ChoosePanelActivity"
    android:background="@drawable/backgroundlight">

    <TableLayout
        android:layout_width="278dp"
        android:layout_height="534dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <TableRow
            android:layout_width="197dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/choosePosition"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="68dp" />

            <Space
                android:layout_width="90dp"
                android:layout_height="142dp"
                tools:layout_editor_absoluteX="264dp"
                tools:layout_editor_absoluteY="166dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button2"
                android:layout_width="237dp"
                android:layout_height="match_parent"
                android:text="@string/teacherPanel"
                tools:layout_editor_absoluteX="137dp"
                tools:layout_editor_absoluteY="108dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parentPanel"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="200dp" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>